# affogato

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.imjoy.json
.github/workflows/: build.yaml  build_linux.sh  build_unix.sh  build_win.bat  environment.yaml
cmake/: FindNUMPY.cmake
conda-recipe/: build.sh  meta.yaml
example/: MutexWatershed.ipynb
example/causal_mws/: hela.py
example/data/AffinityUnet/: model.py  state.nn  state_dict.nn  state_trans.nn  tiktorch_config.yml
example/data/Affinity_Unet/: model.py  state_8.nn  tiktorch_config.yml
example/interactive/: debug.py  interactive_napari.py  interactive_napari_modelzoo.py  trainable_napari.py
example/malis/: malis.py  mutex_malis.py
example/mutex_watershed/: ca_neurofinder_2d.py  isbi.py  isbi_2d.py
example/zwatershed/: isbi_2d.py
examples/: MutexWatershed.ipynb
imjoy/: annotator_dev.imjoy.html  interactive_mws.imjoy.html
include/affogato/: util.hxx
include/affogato/affinities/: affinities.hxx  embedding_distances.hxx  multiscale_affinities.hxx
include/affogato/learning/: malis.hxx  mutex_malis.hxx
include/affogato/segmentation/: connected_components.hxx  grid_graph.hxx  mutex_watershed.hxx  semantic_mutex_watershed.hxx  single_linkage.hxx  zwatershed.hxx
script/: benchmark.py  create_test_data.py  plot_benchmark.py
src/: CMakeLists.txt
src/javascript/: CMakeLists.txt  README.md  mws_functions.cpp  test_mws.html
src/python/: CMakeLists.txt
src/python/lib/: CMakeLists.txt  affogato.cxx
src/python/lib/affinities/: CMakeLists.txt  affinities.cxx
src/python/lib/learning/: CMakeLists.txt  learning.cxx
src/python/lib/segmentation/: CMakeLists.txt  segmentation.cxx
src/python/module/affogato/affinities/: __init__.py
src/python/module/affogato/dunet_transfair/: model.py  train.py  train_conf.yml
src/python/module/affogato/imjoy/: mws_plugin.py
src/python/module/affogato/interactive/imjoy/: __init__.py  util.py
src/python/module/affogato/interactive/napari/: __init__.py  mws_with_seeds.py  napari.py  napari_training.py  train_utils.py  trainable_napari.py
src/python/module/affogato/learning/: __init__.py
src/python/module/affogato/segmentation/: __init__.py  causal_mws.py  interactive_mws.py  mws.py  semantic_mws.py
src/python/test/affinities/: test_affinities.py  test_embedding_dists.py  test_multiscale_affinities.py
src/python/test/learning/: test_malis.py  test_mutex_malis.py
src/python/test/segmentation/: test_connected_components.py  test_grid_graph.py  test_interactive_mws_segmentation.py  test_mutex_watershed.py  test_zwatershed.py
src/python/test/segmentation/interactive/: test_interactive_real.py  test_interactive_toy.py
